--- a/index.html
+++ b/index.html
@@ -7,8 +7,17 @@
 	<title>Angular Application</title>
 
     <link rel="stylesheet" href="app.css" />
+
+
+		</script>
 </head>
 <body>
+	<div ng-app="hackerNews">
+		{{4 +3}}
+	</div>
 
+	<!-- JS files included here -->
+	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.3/angular.min.js"></script>
+	<script src="js/app.js"></script>
 </body>
 </html>
