--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
   <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
   <script src="js/app/app.js"></script>
-  <script src="js/app/components/Story.js"></script>
+  <script src="js/app/components/Item.js"></script>
   <script src="js/app/controllers/PostController.js"></script>
   <script src="js/app/controllers/TopController.js"></script>
   <script src="js/app/services/PostsService.js"></script>
