--- a/index.html
+++ b/index.html
@@ -7,8 +7,6 @@
 	<title>Angular Application</title>
 
     <link rel="stylesheet" href="app.css" />
-		<!-- <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.5.0/angular.js"></script>
-		<script src="//cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.10/angular-ui-router.js"></script> -->
 
 
 </head>
@@ -25,5 +23,6 @@
 		<script src='javascript/app/app.js'></script>
 		<script src='javascript/app/controllers/MainCtrl.js'></script>
 		<script src='javascript/app/services/ArticleService.js'></script>
+		<script src='javascript/app/filters/PageFilter.js'></script>
 	</body>
 </html>
