re-naming attempt 1

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 </head>
 	<body ng-app='app'>
-		<div ng-controller='MainCtrl as ctrl'>
+		<div ng-controller='TopStoriesController as ctrl'>
 		{{ctrl.message}}
 
 
@@ -21,8 +21,9 @@
 		<script src='javascript/angular.js'></script>
 		<script src='javascript/angular-ui-router.js'></script>
 		<script src='javascript/app/app.js'></script>
-		<script src='javascript/app/controllers/MainCtrl.js'></script>
-		<script src='javascript/app/services/ArticleService.js'></script>
+		<script src='javascript/app/controllers/TopStoriesController.js'></script>
+		<script src='javascript/app/controllers/PostsController.js'></script>
+		<script src='javascript/app/services/PostsService.js'></script>
 		<script src='javascript/app/filters/PageFilter.js'></script>
 	</body>
 </html>
