--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
 		<ui-view></ui-view>
 
 		</div>
-		<script src='javascript/angular.js'></script>
-		<script src='javascript/angular-ui-router.js'></script>
-		<script src='javascript/app/app.js'></script>
-		<script src='javascript/app/controllers/TopStoriesController.js'></script>
-		<script src='javascript/app/controllers/PostController.js'></script>
-		<script src='javascript/app/services/PostsService.js'></script>
-		<script src='javascript/app/filters/PageFilter.js'></script>
+		<script src='js/angular.js'></script>
+		<script src='js/angular-ui-router.js'></script>
+		<script src='js/app/app.js'></script>
+		<script src='js/app/controllers/TopStoriesController.js'></script>
+		<script src='js/app/controllers/PostController.js'></script>
+		<script src='js/app/services/PostsService.js'></script>
+		<script src='js/app/filters/PageFilter.js'></script>
 	</body>
 </html>
