--- a/index.html
+++ b/index.html
@@ -12,12 +12,14 @@
 		</script>
 </head>
 <body>
-	<div ng-app="hackerNews">
+	<div ng-app="hackerNews" ng-cloak>
 		{{4 +3}}
 	</div>
 
 	<!-- JS files included here -->
-	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.3/angular.min.js"></script>
-	<script src="js/app.js"></script>
+	<script src="js/angular.min.js"></script>
+	<script src="js/angular-ui-router.min.js"></script>
+	<script src="js/angular-sanitize.min.js"></script>
+	<script src="js/app/app.js"></script>
 </body>
 </html>
