--- a/index.html
+++ b/index.html
@@ -10,16 +10,16 @@
 </head>
 <body>
   <div ng-app="app">
-    <div ng-controller="Hello as hello">
-      {{hello.hi}}
-    </div>
+    <div ui-view></div>
   </div>
 
   <script src="js/angular.js"></script>
-  <script src="js/app/app.js"></script>
-  <script src="js/app/controllers/hello.js"></script>
   <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
   <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
+  <script src="js/app/app.js"></script>
+  <script src="js/app/services/StoriesService.js"></script>
+  <script src="js/app/controllers/TopStoriesController.js"></script>
+  <script src="js/app/components/item.js"></script>
 
 </body>
 </html>
