comments, score, and some css

--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
 </head>
 <body>
   <div ng-app="app">
+    <header class="header__fixed">
+      <ul>Hacker News 2.0
+        <li><a href="">home</a></li>
+      </ul>
+    </header>
     <div ui-view></div>
   </div>
 
