--- a/index.html
+++ b/index.html
@@ -18,8 +18,9 @@
   <script src="js/angular-ui-router.js"></script>
   <script src="js/app/app.js"></script>
   <script src="js/app/controllers/NewsController.js"></script>
-  <script src="js/app/controllers/ArticleController.js"></script>
   <script src="js/app/services/NewsService.js"></script>
-
+  <script src="js/app/controllers/PostController.js"></script>
+  <script src="js/app/components/Item.js"></script>
+  <script src="/bower_components/angular-sanitize/angular-sanitize.js"></script>
 </body>
 </html>
