created hackerNews module, and defined application in index.html using ng-app directive

--- a/index.html
+++ b/index.html
@@ -9,6 +9,14 @@
     <link rel="stylesheet" href="app.css" />
 </head>
 <body>
+  <div ng-app="hackerNews">
+    
+  </div>
 
+
+
+
+  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.3/angular.min.js"></script>
+  <script src="js/app.js"></script>
 </body>
 </html>
