--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
   <script src="js/angular-sanitize.js"></script>
   <script src="js/app/app.js"></script>
   <script src="js/app/controllers/TopStoriesController.js"></script>
-  <script src="js/app/Services/StoriesService.js"></script>
+  <script src="js/app/controllers/StoryController.js"></script>
+  <script src="js/app/components/Item.js"></script>
+  <script src="js/app/services/StoriesService.js"></script>
 </body>
 </html>
