trying something new

--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
     <link rel="stylesheet" href="app.css" />
 </head>
 <body>
-  <div ng-app="app" class="app">
+  <header>
     <h2>Hacker News Client</h2>
+  </header>
+    <div ng-app="app" class="app">
       <li>
         <a ui-sref="topstory" ui-sref-active="active">Refresh Stories</a>
       </li>
