Everything works! Need to refactor topstoriescontroller. change route names to pass tests

--- a/index.html
+++ b/index.html
@@ -24,8 +24,11 @@
   <script src="node_modules/angular-utils-pagination/dirPagination.js"></script>
   <script src="js/angular-ui-router.js"></script>
   <script src="js/app/app.js"></script>
+  <script src="js/app/controllers/TopStoriesController.js"></script>
   <script src="js/app/controllers/StoryController.js"></script>
   <script src="js/app/services/StoryService.js"></script>
+  <script src="js/app/components/comment.js"></script>
+  <script src="js/app/services/PostService.js"></script>
   <script src="js/angular-resource.js"></script>
 </body>
 </html>
