--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   </header>
     <div ng-app="app" class="app">
       <li>
-        <a ui-sref="topstory" ui-sref-active="active">Refresh Stories</a>
+        <a ui-sref="top" ui-sref-active="active">Refresh Stories</a>
       </li>
         <div ui-view></div>
   </div>
