Added comments and some CSS

--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
   <script src="js/app/controllers/TopStoriesController.js"></script>
   <script src="js/app/controllers/PostController.js"></script>
   <script src="js/app/services/HackerNewsService.js"></script>
-  <script src="js/app/components/Post.js"></script>
+  <script src="js/app/components/Thread.js"></script>
+  <script src="js/app/components/Comment.js"></script>
 
 </body>
 </html>
