--- a/index.html
+++ b/index.html
@@ -4,13 +4,17 @@
 	<meta charset="utf-8">
 
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Angular Application</title>
+	<title>Angular Hacker News!</title>
 
     <link rel="stylesheet" href="app.css" />
 </head>
 <body>
 
-  <div ng-app="app">   
+  <div ng-app="app">  
+    <div class="header__fixed">
+      <a class="header" href="#/top">Hacker News!</a><br/>
+    </div><br/>
+    
     <div ui-view></div>
   </div>
 
