top stories is now working

--- a/index.html
+++ b/index.html
@@ -8,10 +8,14 @@
 
     <link rel="stylesheet" href="app.css" />
 </head>
-<body>
-  <div ng-app="app">
+<body ng-app="app">
+  
+    <nav>
+      <a href="#" ui-sref="top" ui-sref-active="active">See Top Stories</a>
+    </nav>
+      <h1>Welcome To Hacker News</h1>
     <div ui-view></div>
-  </div>
+  
 
 
 
