--- a/index.html
+++ b/index.html
@@ -18,7 +18,13 @@
 <body>
   <div ng-controller="PostsController">
     <div ui-view>
-
+<div ng-controller="TopStoriesController as sss">
+   <ul>
+   <li ng-repeat="d in sss.topStories">
+     {{ d }}
+     </li>
+   </ul>
+ </div> 
     </div>
   </div>
 
