--- a/index.html
+++ b/index.html
@@ -10,8 +10,12 @@
     <script src="js/angular.js"></script>
     <script src="js/angular-ui-router.js"></script>
     <script src="js/angular-resource.js"></script>
+    <script src="js/angular-sanitize.js"></script>
     <script src="js/app/app.js"></script>
     <script src="js/app/controllers/TopStoriesController.js"></script>
+    <script src="js/app/directives/StoryComponent.js"></script>
+    <script src="js/app/directives/CommentComponent.js"></script>
+    <script src="js/app/filters/SafeHTMLFilter.js"></script>
     <script src="js/app/controllers/PostsController.js"></script>
     <script src="js/app/services/topStoriesService.js"></script>
 </head>
