--- a/index.html
+++ b/index.html
@@ -9,6 +9,27 @@
     <link rel="stylesheet" href="app.css" />
 </head>
 <body>
+	<div ng-app="app" class="app">
+		<header class="header">
+				<div class="header__fixed">
+						<ul>
+								<li>
+										<a ui-sref="top" ui-sref-active="active">Top Stories</a>
+								</li>
+						</ul>
+				</div>
+		</header>
+		<div ui-view></div>
+</div>
+
+<script src="js/angular.js"></script>
+<script src="js/angular-ui-router.js"></script>
+<script src="js/angular-sanitize.js"></script>
+<script src="js/app/app.js"></script>
+<script src="js/app/components/item.js"></script>
+<script src="js/app/controllers/PostController.js"></script>
+<script src="js/app/controllers/StoriesController.js"></script>
+<script src="js/app/services/fetcher.js"></script>
 
 </body>
 </html>
