--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
 </head>
 <body>
 
+	<div ng-app="app" class="app">
+	    <div ui-view></div>
+	</div>	
+
 	<script src="js/angular.js"></script>
 	<script src="js/angular-ui-router.js"></script>
 	<script src="js/angular-sanitize.js"></script>
