added story component. story component will be used in top.html and post.html

--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
   <link rel="stylesheet" href="app.css" />
 </head>
 <body ng-app="app">
-	<a ui.sref="top">Top</a>
 
 	<ui-view></ui-view>
 
@@ -21,8 +20,8 @@
 	<script src="js/app/services/PostService.js"></script>
 	<script src="js/app/controllers/TopStoriesController.js"></script>
 	<script src="js/app/controllers/PostController.js"></script>
-	<script src="js/app/components/comment.js">
+	<script src="js/app/components/story.js"></script>
+	<script src="js/app/components/comment.js"></script>
 
-	</script>
 </body>
 </html>
