pagination working but no links yet

--- a/index.html
+++ b/index.html
@@ -15,10 +15,8 @@
     Hello {{name}}
   </div>
 
-  <div ng-controller="BasicController">
     <div ui-view></div>
     
-    </div>
 </div>
 
 <script src="js/angular.js"></script>
@@ -26,6 +24,8 @@
 <script src="js/app/app.js"></script>
 <script src="js/app/controllers/BasicController.js"></script>
 <script src="js/app/controllers/OtherController.js"></script>
+<script src="js/app/controllers/PagesController.js"></script>
+
 
 <script src="js/app/services/BasicService.js"></script>
 
