added date in correct format and used angular sanitize for comments

--- a/index.html
+++ b/index.html
@@ -11,11 +11,6 @@
 <body >
 <div ng-app="app">
 
-  <div >
-    Name:<input ng-model="name" type="text"/>
-    Hello {{name}}
-  </div>
-
   <div ui-view></div>
 
 </div>
@@ -27,10 +22,9 @@
 <script src="js/app/controllers/OtherController.js"></script>
 <script src="js/app/controllers/PagesController.js"></script>
 <script src="js/app/directives/Comments.js"></script>
-
-
-
 <script src="js/app/services/BasicService.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/angular-sanitize/1.5.5/angular-sanitize.js"></script>
+
 
 
 </body>
