--- a/index.html
+++ b/index.html
@@ -1,14 +1,25 @@
 <!doctype html>
 <html>
-<head>
-	<meta charset="utf-8">
+  <head>
+    <meta charset="utf-8">
 
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Angular Application</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Racker News</title>
 
     <link rel="stylesheet" href="app.css" />
-</head>
+    <link rel="icon" type="image/gif" href="favicon.gif" />
+  </head>
 <body>
+
+  <div ng-app="app" class="app">
+    STEVE!
+    <div ui-view></div>
+  </div>
+
+  <script src="js/angular.js"></script>
+  <script src="js/app/app.js"></script>
+  <script src="js/angular-ui-router.js"></script>
+  <script src="js/app/controllers/PostController.js"></script>
 
 </body>
 </html>
