--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
 <body>
 
   <div ng-app="app" class="app">
-    STEVE!
     <div ui-view></div>
   </div>
 
@@ -20,6 +19,7 @@
   <script src="js/app/app.js"></script>
   <script src="js/angular-ui-router.js"></script>
   <script src="js/app/controllers/PostController.js"></script>
+  <script src="js/app/controllers/ArticleController.js"></script>
 
 </body>
 </html>
