service working.  directive not

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
 
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Racker News</title>
+    <title>"Hacker News"</title>
 
     <link rel="stylesheet" href="app.css" />
     <link rel="icon" type="image/gif" href="favicon.gif" />
@@ -18,8 +18,11 @@
   <script src="js/angular.js"></script>
   <script src="js/app/app.js"></script>
   <script src="js/angular-ui-router.js"></script>
+  <script src="js/app/controllers/TopPostsController.js"></script>
   <script src="js/app/controllers/PostController.js"></script>
   <script src="js/app/controllers/ArticleController.js"></script>
+  <script src="js/app/directives/Article.js"></script>
+  <script src="js/app/services/PostService.js"></script>
 
 </body>
 </html>
