all requirements met, still looks ugly though

--- a/index.html
+++ b/index.html
@@ -18,10 +18,12 @@
   <script src="js/angular.js"></script>
   <script src="js/app/app.js"></script>
   <script src="js/angular-ui-router.js"></script>
+  <script src="node_modules/angular-sanitize/angular-sanitize.js"></script>
   <script src="js/app/controllers/TopPostsController.js"></script>
   <script src="js/app/controllers/PostController.js"></script>
   <script src="js/app/controllers/ArticleController.js"></script>
   <script src="js/app/directives/Article.js"></script>
+  <script src="js/app/components/Item.js"></script>
   <script src="js/app/services/PostService.js"></script>
 
 </body>
