--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 <script type="text/javascript" src="js/app/app.js"></script>
 <script type="text/javascript" src="js/app/controllers/TopStoriesController.js"></script>
 <script type="text/javascript" src="js/app/controllers/PostController.js"></script>
-
+<script type="text/javascript" src="js/app/services/PostsService.js"></script>
 
 </body>
 </html>
