--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
 <script type="text/javascript" src="js/app/controllers/TopStoriesController.js"></script>
 <script type="text/javascript" src="js/app/controllers/PostController.js"></script>
 <script type="text/javascript" src="js/app/services/PostsService.js"></script>
+<script type="text/javascript" src="js/app/components/item.js"></script>
+
 
 </body>
 </html>
