--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Angular Application</title>
+	<title>ng-Hacker News Clone</title>
     <link rel="stylesheet" href="app.css" />
 </head>
 <body>
