--- a/index.html
+++ b/index.html
@@ -9,24 +9,20 @@
     <link rel="stylesheet" href="app.css" />
 </head>
 <body>
-  <h1>This should only show up once</h1>
+  <h1>Top Stories</h1>
     <div ng-app="app" class="app">
-<!--         <div ng-controller="StoriesController as stories">
-          {{ stories.message }}
-        </div> -->
-
-        <a ui-sref="top">Get Top stories</a> 
         
         <div ui-view></div>   
-
-
 
     </div>
 
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.0/angular.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.3.0/angular-ui-router.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.0/angular-sanitize.js"></script>
 <script src="js/app/app.js"></script>
-<script src="js/app/controllers/StoriesController.js"></script>  
-
+<script src="js/app/controllers/TopController.js"></script>
+<script src="js/app/controllers/PostController.js"></script>  
+<script src="js/app/services/ApiService.js"></script>
+<script src="js/app/components/Item.js"></script>
 </body>
 </html>
