--- a/index.html
+++ b/index.html
@@ -9,11 +9,10 @@
     <link rel="stylesheet" href="app.css" />
 </head>
 <body>
-  <h1>Top Stories</h1>
+  <p class="header__fixed">Hacker News Clone</p>
+    <br />
     <div ng-app="app" class="app">
-        
-        <div ui-view></div>   
-
+      <div ui-view></div>
     </div>
 
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.0/angular.min.js"></script>
