--- a/index.html
+++ b/index.html
@@ -11,10 +11,12 @@
     <script src="js/angular-ui-router.js"></script>
     <script src="js/app/app.js"></script>
     <script src="js/app/services/StoryService.js"></script>
+    <script src="js/app/controllers/StoriesController.js"></script>
+    <script src="/js/app/directives/ShowStory.js"></script>
 </head>
 <body>
   <div ng-app="app" ng-strict-di>
-    
+    <div ui-view></div>
   </div>
 </body>
 </html>
