tops stories required info displayed

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body ng-app='app'>
 
-test1
+Put nav here<br>
 <ui-view></ui-view>
 
 
@@ -19,6 +19,7 @@ test1
 <script src="js/angular-ui-router.js"></script>
 <script src="js/app/controllers/storiesController.js"></script>
 <script src="js/app/services/storyService.js"></script>
+<script src="js/app/components/storyCard.js"></script>
 
 </body>
 </html>
