--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body ng-app='app'>
 
-
+<header class='header'><a href='#' ui-sref='top'>Top Stories</a></header>
 <ui-view></ui-view>
 
 
