--- a/index.html
+++ b/index.html
@@ -9,10 +9,13 @@
     <link rel="stylesheet" href="app.css" />
     <script src="js/angular.js"></script>
     <script src="js/angular-ui-router.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-sanitize/1.5.6/angular-sanitize.js"></script>
     <script src="js/app/app.js"></script>
     <script src="js/app/services/StoryService.js"></script>
     <script src="js/app/controllers/StoriesController.js"></script>
-    <script src="/js/app/directives/ShowStory.js"></script>
+    <script src="js/app/directives/ShowStory.js"></script>
+    <script src="js/app/controllers/PostController.js"></script>
+    <script src="js/app/components/comment.js"></script>
 </head>
 <body>
   <div ng-app="app" ng-strict-di>
