services set up, working on controller

--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
     <link rel="stylesheet" href="app.css" />
 </head>
 <body>
-
+  <div ng-app="app" class="app">
+    
+    <div ui-view></div>
+    
+  </div>
 </body>
 </html>
