top stories listing works

--- a/index.html
+++ b/index.html
@@ -10,9 +10,19 @@
 </head>
 <body>
   <div ng-app="app" class="app">
-    
+    <h1>Hacker News</h1>
+    <a ui-sref="top">Top Stories</a> - <a href="/">Home</a>
     <div ui-view></div>
-    
+
   </div>
+
+  <script src="js/angular.js"></script>
+  <script src="js/angular-ui-router.js"></script>
+  <script src="js/app/app.js"></script>
+  <script src="js/app/controllers/TopStoriesController.js"></script>
+  <script src="js/app/controllers/PostController.js"></script>
+  <script src="js/app/directives/TopStory.js"></script>
+  <script src="js/app/services/TopStoriesService.js"></script>
+  <script src="js/app/services/PostService.js"></script>
 </body>
 </html>
