post url view working

--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 <body>
   <div ng-app="app" class="app">
     <h1>Hacker News</h1>
-    <a ui-sref="top">Top Stories</a> - <a href="/">Home</a>
+    <a ui-sref="top">Top Stories</a>
+    
     <div ui-view></div>
 
   </div>
