--- a/index.html
+++ b/index.html
@@ -19,10 +19,12 @@
 
   <script src="js/angular.js"></script>
   <script src="js/angular-ui-router.js"></script>
+  <script src="js/angular-sanitize.js"></script>
   <script src="js/app/app.js"></script>
   <script src="js/app/controllers/TopStoriesController.js"></script>
   <script src="js/app/controllers/PostController.js"></script>
   <script src="js/app/directives/TopStory.js"></script>
+  <script src="js/app/directives/Comment.js"></script>
   <script src="js/app/services/TopStoriesService.js"></script>
   <script src="js/app/services/PostService.js"></script>
 </body>
