added some styles

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 </head>
 <body>
   <div ng-app="app" class="app">
-    <h1>Hacker News</h1>
-    <a ui-sref="top">Top Stories</a>
+      <h2 class="header">Hacker News</h2>
+      <a ui-sref="top">Top Stories</a>
     
     <div ui-view></div>
 
