--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
 
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Angular Application</title>
+    <title>HACKER NEWS</title>
 </head>
 <body ng-app="app">
   <a ui-sref="top" ui-sref-active="active">Top Stories</a>
@@ -16,7 +16,10 @@
     <script src="js/app/controllers/PostController.js"></script>
     <script src="js/app/controllers/TopController.js"></script>
     <script src="js/app/services/DomainService.js"></script>
+    <script src="js/app/components/Item.js"></script>
     <script src="js/angular-ui-router.js"></script>
+    <script src="js/angular-sanitize.js"></script>
+    <!-- <script src="js/angular-route.js"></script> -->
 
 </body>
 </html>
