--- a/index.html
+++ b/index.html
@@ -5,9 +5,18 @@
 
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>HACKER NEWS</title>
+
+    <link rel="stylesheet" href="app.css" />
 </head>
 <body ng-app="app">
-  <a ui-sref="top">Top Stories</a>
+  <header class="header">
+    <div class="header__fixed">
+      <ul>
+        <a ui-sref="top">Top Stories</a>
+      </ul>
+    </div>
+  </header>
+
   <div ui-view></div>
 
 
