Added controllers and script tags to index page

--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
 <script src="js/angular.js"></script>
 <script src="js/angular-ui-router.js"></script>
 <script src="js/app/app.js"></script>
+<script type="js/app/services/TopStoryService.js"></script>
+<script type="js/app/controllers/PostController.js"></script>
+<script type="js/app/controllers/TopStoryController.js"></script>
 
 </body>
 </html>
