--- a/index.html
+++ b/index.html
@@ -14,9 +14,10 @@
   <div ui-view></div>
 </div>
 
+<script src="js/app/app.js"></script>
 <script src="js/angular.js"></script>
 <script src="js/angular-ui-router.js"></script>
-<script src="js/app/app.js"></script>
+<script type="tests/angular-sanitize.js"></script>
 <script type="js/app/services/TopStoryService.js"></script>
 <script type="js/app/controllers/PostController.js"></script>
 <script type="js/app/controllers/TopStoryController.js"></script>
