--- a/index.html
+++ b/index.html
@@ -7,8 +7,26 @@
 	<title>Angular Application</title>
 
     <link rel="stylesheet" href="app.css" />
+
+
+
 </head>
 <body>
+<div  ng-app = "app">
+	<div ui-view>
 
+	</div>
+</div>
+
+
+
+<script type="text/javascript" src="js/angular.js"></script>
+<script type="text/javascript" src="js/app/app.js"></script>
+<script type="text/javascript" src="js/angular-ui-router.js"></script>
+<script type="text/javascript" src="js/angular-sanitize.js"></script>
+<script type="text/javascript" src="js/app/controllers/NewsController.js"></script>
+<script type="text/javascript" src="js/app/controllers/StoryController.js"></script>
+<script type="text/javascript" src="js/app/services/NewsService.js"></script>
+<script type="text/javascript" src="js/app/component/item.js"></script>
 </body>
 </html>
