--- a/index.html
+++ b/index.html
@@ -6,11 +6,17 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>Angular Application</title>
 
-    <link rel="stylesheet" href="app.css" />
+    <link rel="stylesheet" href="app.css"/>
 </head>
 <body>
 	<div ng-app="app" class="app">
-		<a href="" ui-sref="top">Top News Stories</a>
+		<header class="header">
+		  <div class+"header__fixed">
+				<ul>
+					<li> 	<a ui-sref="top" ui-sref-active="active">Top Stories</a>	 </li>
+				</ul>
+			</div>
+		</header>
 		<div ui-view></div>
 	</div>
 	<script src="js/angular.js"></script>
