--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 	<script src="js/angular-ui-router.js"></script>
 	<script src="js/app/app.js"></script>
 	<script src="js/app/controllers/TopController.js"></script>
+	<script src="js/app/controllers/PostController.js"></script>
 	<script src="js/app/services/HackerNewsService.js"></script>
 	<script src="js/app/directives/Story.js"></script>
 </body>
