--- a/index.html
+++ b/index.html
@@ -21,10 +21,12 @@
 	</div>
 	<script src="js/angular.js"></script>
 	<script src="js/angular-ui-router.js"></script>
+	<script src="js/angular-sanitize.js"></script>
 	<script src="js/app/app.js"></script>
 	<script src="js/app/controllers/TopController.js"></script>
 	<script src="js/app/controllers/PostController.js"></script>
 	<script src="js/app/services/HackerNewsService.js"></script>
 	<script src="js/app/directives/Story.js"></script>
+	<script src="js/app/directives/Comment.js"></script>
 </body>
 </html>
