--- a/index.html
+++ b/index.html
@@ -9,6 +9,23 @@
     <link rel="stylesheet" href="app.css" />
 </head>
 <body>
+  <div ng-app="app" class="app">
+      <h2 class="header">Hacker News</h2>
+      <a ui-sref="top">Top Stories</a>
 
+    <div ui-view></div>
+
+  </div>
+
+  <script src="js/angular.js"></script>
+  <script src="js/angular-ui-router.js"></script>
+  <script src="js/angular-sanitize.js"></script>
+  <script src="js/app/app.js"></script>
+  <script src="js/app/controllers/TopStoriesController.js"></script>
+  <script src="js/app/controllers/PostController.js"></script>
+  <script src="js/app/directives/TopStory.js"></script>
+  <script src="js/app/directives/Comment.js"></script>
+  <script src="js/app/services/TopStoriesService.js"></script>
+  <script src="js/app/services/PostService.js"></script>
 </body>
 </html>
