--- a/index.html
+++ b/index.html
@@ -10,5 +10,10 @@
 </head>
 <body>
 
+	<script src="js/angular.js"></script>
+	<script src="js/angular-ui-router.js"></script>
+	<script src="js/angular-sanitize.js"></script>
+	<script src="js/app/app.js"></script>
+
 </body>
 </html>
