fixed syntax for app resolve

--- a/index.html
+++ b/index.html
@@ -9,11 +9,20 @@
     <link rel="stylesheet" href="app.css" />
 </head>
 <body>
+	<div ng-app='app' class='app'>
+
+	    <a ui-sref="top" ui-sref-active="active">Top Stories</a>
+
+			<div ui-view></div>
+	</div>
+
 
 	<script src="js/angular.js"></script>
 	<script src="js/angular-ui-router.js"></script>
 	<script src="js/angular-sanitize.js"></script>
 	<script src="js/app/app.js"></script>
+	<script src="js/app/controllers/TopStoriesController.js"></script>
+
 
 </body>
 </html>
