--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 	<script src="js/angular-sanitize.js"></script>
 	<script src="js/app/app.js"></script>
 	<script src="js/app/controllers/TopStoriesController.js"></script>
+	<script src="js/app/controllers/PostController.js"></script>
 	<script src="js/app/services/PostsService.js"></script>
 
 
