--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 	<script src="js/app/controllers/TopStoriesController.js"></script>
 	<script src="js/app/controllers/PostController.js"></script>
 	<script src="js/app/services/PostsService.js"></script>
-
+	<script src="js/app/components/Item.js"></script>
 
 </body>
 </html>
