--- a/index.html
+++ b/index.html
@@ -25,5 +25,6 @@
   <script src="js/app/app.js"></script>
   <script src="js/app/controllers/TopListCtrl.js"></script>
   <script src="js/app/services/GetPostsService.js"></script>
+  <script src="js/app/filters/shortUrl.js"></script>
 </body>
 </html>
