--- a/index.html
+++ b/index.html
@@ -7,16 +7,29 @@
 	<title>Angular Application</title>
 
     <link rel="stylesheet" href="app.css" />
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 </head>
 <body>
-  <div ng-app="app">
-    <div ng-controller="TopListCtrl">
-      <li ng-repeat="post in posts">
-            <a href="{{ post.url }}">{{ post.title }}</a>
-            <span class="url">{{ post.url | shortUrl }}</span>
-            <small> {{ post.points + " points"}} by {{ post.by }} {{ post.postedAgo }} | {{ post.commentCount + " comments" }}</small>
-        </li>
+  <header>
+  	<div class="col-md-8 col-md-offset-2">
+  		<h1 class="logo">Hacker News</h1>
+  	</div>
+  </header>
+  <div ng-app="app" class="app">
+    <div ng-controller="TopListCtrl" class="well col-md-8 col-md-offset-2">
+      <ul class="list-unstyled posts">
+        <li ng-repeat="post in posts | pagination: curPage * pageSize | limitTo: pageSize">
+              <span id="post"><span>{{ post.listId }}.</span> <a href="{{ post.url }}">{{ post.title }}</a>
+              <small>({{ post.url | shortUrl }})</small><br>
+              <small> {{ post.score + " points"}} by {{ post.by }} {{ post.time * 1000 | date:'MM-dd-yyyy HH:mm:ss' }} | {{ post.kids.length + " comments" }}</small></span>
+          </li>
+      </ul>
 
+      <div class="pagination" ng-show="posts.length">
+        <button type="button" ng-disabled="curPage == 0" ng-click="curPage=curPage-1" class="btn btn-xs btn-default">PREV</button>
+        <small>Page {{curPage + 1}} of {{ numberOfPages() }}</small>
+        <button type="button" ng-disabled="curPage >= posts.length/pageSize - 1" ng-click="curPage = curPage+1" class="btn btn-xs btn-default">NEXT </button>
+      </div>
     </div>
   </div>
 
@@ -25,6 +38,7 @@
   <script src="js/app/app.js"></script>
   <script src="js/app/controllers/TopListCtrl.js"></script>
   <script src="js/app/services/GetPostsService.js"></script>
+  <script src="js/app/filters/pagination.js"></script>
   <script src="js/app/filters/shortUrl.js"></script>
 </body>
 </html>
