--- a/index.html
+++ b/index.html
@@ -10,12 +10,13 @@
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 </head>
 <body>
-  <header>
-  	<div class="col-md-8 col-md-offset-2">
-  		<h1 class="logo">Hacker News</h1>
-  	</div>
-  </header>
   <div ng-app="app" class="app">
+    <header class="header">
+    	<div class="header__fixed">
+    		<a ui-sref="list" ui-sref-active="active">Hacker News</a>
+    	</div>
+    </header>
+
     <div ui-view></div>
   </div>
 
@@ -24,7 +25,9 @@
   <script src="node_modules/angular-sanitize/angular-sanitize.js"></script>
   <script src="js/app/app.js"></script>
   <script src="js/app/controllers/TopListCtrl.js"></script>
+  <script src="js/app/controllers/PostInfoCtrl.js"></script>
   <script src="js/app/services/GetPostsService.js"></script>
+  <script src="js/app/services/GetPostInfoService.js"></script>
   <script src="js/app/filters/pagination.js"></script>
   <script src="js/app/filters/shortUrl.js"></script>
 </body>
