--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <div ng-app="app" class="app">
     <header class="header">
     	<div class="header__fixed">
-    		<a ui-sref="list" ui-sref-active="active">Hacker News</a>
+    		<a ui-sref="top" ui-sref-active="active">Hacker News</a>
     	</div>
     </header>
 
