--- a/index.html
+++ b/index.html
@@ -10,9 +10,20 @@
 </head>
 
 <body>
+	<div ng-app="app">
+		<a href="" ui-sref="top">Top</a>
+
+		<div ui-view>
+
+		</div>
+	</div>
 
 	<script src="js/angular.js"></script>
+	<script src="js/angular-ui-router.js"></script>
+	<script src="js/angular-sanitize.js"></script>
 	<script src="js/app/app.js"></script>
-
+	<script src="js/app/controllers/TopStoriesController.js"></script>
+	<script src="js/app/controllers/StoryController.js"></script>
+	<script src="js/app/services/StoryService.js"></script>
 </body>
 </html>
