--- a/index.html
+++ b/index.html
@@ -11,7 +11,11 @@
 
 <body>
 	<div ng-app="app">
-		<a href="" ui-sref="top">Top</a>
+		<header class="header">
+			<div class="header__fixed">
+				<a ui-sref="top" uis-sref-active="active">Top News</a>
+			</div>
+		</header>
 
 		<div ui-view>
 
@@ -23,7 +27,8 @@
 	<script src="js/angular-sanitize.js"></script>
 	<script src="js/app/app.js"></script>
 	<script src="js/app/controllers/TopStoriesController.js"></script>
-	<script src="js/app/controllers/StoryController.js"></script>
 	<script src="js/app/services/StoryService.js"></script>
+	<script src="js/app/controllers/StoryController.js"></script>
+
 </body>
 </html>
