--- a/index.html
+++ b/index.html
@@ -27,8 +27,9 @@
 	<script src="js/angular-sanitize.js"></script>
 	<script src="js/app/app.js"></script>
 	<script src="js/app/controllers/TopStoriesController.js"></script>
-	<script src="js/app/services/StoryService.js"></script>
 	<script src="js/app/controllers/StoryController.js"></script>
+	<script src="js/app/services/StoryService.js"></script>
+	<script src="js/app/components/Story.js"></script>
 
 </body>
 </html>
