Added script tag references to dependencies: angular, angular-ui-router, angular-sanitize, app.js, and TopStoriesController.js

--- a/index.html
+++ b/index.html
@@ -7,8 +7,15 @@
 	<title>Angular Application</title>
 
     <link rel="stylesheet" href="app.css" />
+
 </head>
 <body>
 
+
+  <script src="js/angular.js"></script>
+  <script src="js/angular-ui-router.js"></script>
+  <script src="js/angular-sanitize.js"></script>
+  <script src="js/app/app.js"></script>
+  <script src="js/app/controllers/TopStoriesController.js"></script>
 </body>
 </html>
