Connected index.html to app; added ui-sref link to Top Stories

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
 </head>
 <body>
 
+  <div ng-app="app" class="app">
+    <a ui-sref="top" ui-sref-active="active">Top Stories</a>
+  </div>
 
   <script src="js/angular.js"></script>
   <script src="js/angular-ui-router.js"></script>
