Added ui-view div

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
   <div ng-app="app" class="app">
     <a ui-sref="top" ui-sref-active="active">Top Stories</a>
+    <div ui-view></div>
   </div>
 
   <script src="js/angular.js"></script>
