Added PostsService in script tags

--- a/index.html
+++ b/index.html
@@ -21,5 +21,6 @@
   <script src="js/angular-sanitize.js"></script>
   <script src="js/app/app.js"></script>
   <script src="js/app/controllers/TopStoriesController.js"></script>
+  <script src="js/app/services/PostsService.js"></script>
 </body>
 </html>
