Added PostController.js and Post.js in script tags

--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
   <script src="js/angular-sanitize.js"></script>
   <script src="js/app/app.js"></script>
   <script src="js/app/controllers/TopStoriesController.js"></script>
+  <script src="js/app/controllers/PostController.js"></script>
+  <script src="js/app/components/Post.js"></script>
   <script src="js/app/services/PostsService.js"></script>
 </body>
 </html>
