--- a/index.html
+++ b/index.html
@@ -10,5 +10,9 @@
 </head>
 <body>
 
+<script src="js/angular.min.js"></script>
+<script src="js/angular-ui-router.js"></script>
+<script src="js/angular-sanitize.js"></script>
+<script src="js/app.js"></script>
 </body>
 </html>
