adds gitignore and tests angular functionality

--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
     <link rel="stylesheet" href="app.css" />
 </head>
 <body>
+	<div ng-app>
+		<input ng-model="name" />
+		<h1>Hello, my name is ... {{ name }}</h1>
+	</div>
 
 <script src="js/angular.min.js"></script>
 <script src="js/angular-ui-router.js"></script>
