--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 <script src="js/angular-ui-router.js"></script>
 <script src="js/angular-sanitize.js"></script>
 <script src="js/app/app.js"></script>
+<script src="js/app/services/TopStoriesService.js"></script>
 <script src="js/app/controllers/TopStoriesController.js"></script>
 </body>
 </html>
