adds title, domain, score and author to Story directive

--- a/index.html
+++ b/index.html
@@ -19,5 +19,6 @@
 <script src="js/app/app.js"></script>
 <script src="js/app/services/TopStoriesService.js"></script>
 <script src="js/app/controllers/TopStoriesController.js"></script>
+<script src="js/app/directives/Story.js"></script>
 </body>
 </html>
