--- a/index.html
+++ b/index.html
@@ -16,9 +16,11 @@
 <script src="js/angular.min.js"></script>
 <script src="js/angular-ui-router.js"></script>
 <script src="js/angular-sanitize.js"></script>
+<script src="node_modules/angular-utils-pagination/dirPagination.js"></script>
 <script src="js/app/app.js"></script>
 <script src="js/app/services/TopStoriesService.js"></script>
 <script src="js/app/controllers/TopStoriesController.js"></script>
 <script src="js/app/directives/Story.js"></script>
+
 </body>
 </html>
