adds pagination to top stories page

--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
 
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>Angular Application</title>
-
+		<link rel="stylesheet" href="https://npmcdn.com/tachyons@4.0.1/css/tachyons.min.css">
+		<link rel="stylesheet" href="css/tachyons-extras.css">
     <link rel="stylesheet" href="app.css" />
 </head>
 <body>
 	<div ng-app="app">
-		<div ui-view></div>
+		<div class="ph2 ph4-ns" ui-view></div>
 	</div>
 
 <script src="js/angular.min.js"></script>
