adds post state to application with controller and view

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 <script src="js/angular-sanitize.js"></script>
 <script src="node_modules/angular-utils-pagination/dirPagination.js"></script>
 <script src="js/app/app.js"></script>
+<script src="js/app/controllers/StoryController.js"></script>
 <script src="js/app/services/TopStoriesService.js"></script>
 <script src="js/app/controllers/TopStoriesController.js"></script>
 <script src="js/app/directives/Story.js"></script>
