--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 <script src="js/app/services/TopStoriesService.js"></script>
 <script src="js/app/controllers/TopStoriesController.js"></script>
 <script src="js/app/directives/Story.js"></script>
+<script src="js/app/components/StoryComment.js"></script>
 
 </body>
 </html>
