--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
 <script src="js/app/controllers/TopStoriesController.js"></script>
 <script src="js/app/directives/Story.js"></script>
 <script src="js/app/components/StoryComment.js"></script>
+<script src="js/app/filters/getHoursAgo.js"></script>
+<script src="js/app/filters/getNumComments.js"></script>
+<script src="js/app/filters/getDomainFromUrl.js"></script>
 
 </body>
 </html>
