Adding script reference to Comment.js

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <script src="js/app/app.js"></script>
   <script src="js/app/controllers/TopStoriesController.js"></script>
   <script src="js/app/controllers/PostController.js"></script>
-  <script src="js/app/components/Post.js"></script>
+  <script src="js/app/components/Comment.js"></script>
   <script src="js/app/services/PostsService.js"></script>
 </body>
 </html>
