--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 	<div ng-app="app" class="app">
-		<a href="" ui-sref="top stories">Top Stories</a>
+		<a href="" ui-sref="top">Top Stories</a>
 		<div ui-view></div>
 	</div>
 
@@ -18,6 +18,13 @@
 <script src="js/angular-ui-router.js"></script>
 <script src="js/app/app.js"></script>
 <script src="js/app/controllers/StoriesController.js"></script>
+<script src="js/app/filters/MyPagination.js"></script>
 <script src="js/app/services/StoriesService.js"></script>
+<script src="js/app/services/PostService.js"></script>
+<script src="js/app/components/PostItemComponent.js"></script>
+<script src="js/app/components/PageChanger.js"></script>
+
+
+
 </body>
 </html>
