--- a/index.html
+++ b/index.html
@@ -4,11 +4,32 @@
 	<meta charset="utf-8">
 
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Angular Application</title>
+	<title>Flapper News</title>
 
     <link rel="stylesheet" href="app.css" />
 </head>
-<body>
+  <body>
+    <div ng-app="app" class="app">
+        <header class="header">
+            <div class="header__fixed">
+                <ul>
+                    <li>
+                        <a ui-sref="top" ui-sref-active="active">Top Stories</a>
+                    </li>
+                </ul>
+            </div>
+        </header>
+        <div ui-view></div>
+    </div>
 
-</body>
+    <script src="js/angular.js"></script>
+    <script src="js/angular-ui-router.js"></script>
+    <script src="js/angular-sanitize.js"></script>
+    <script src="js/app/app.js"></script>
+    <script src="js/app/components/Item.js"></script>
+    <script src="js/app/controllers/PostStoriesController.js"></script>
+    <script src="js/app/controllers/TopStoriesController.js"></script>
+    <script src="js/app/services/PostsService.js"></script>
+
+  </body>
 </html>
