--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
 
     <link rel="stylesheet" href="app.css" />
 </head>
-<body>
-
-
+<body ng-app="app">
+  <div ui-view>
+     <!-- template of state inserted here --> 
+  </div>
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.3.1/angular-ui-router.min.js"></script>
   <script src="js/app/app.js"></script>
