--- a/index.html
+++ b/index.html
@@ -15,5 +15,6 @@
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.3.1/angular-ui-router.min.js"></script>
   <script src="js/app/app.js"></script>
+  <script src="js/app/controllers/StoriesController.js"></script>
 </body>
 </html>
