add StoriesService and getTopStories to populate stories array

--- a/index.html
+++ b/index.html
@@ -16,5 +16,6 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.3.1/angular-ui-router.min.js"></script>
   <script src="js/app/app.js"></script>
   <script src="js/app/controllers/StoriesController.js"></script>
+  <script src="js/app/services/StoriesService.js"></script>
 </body>
 </html>
