--- a/index.html
+++ b/index.html
@@ -17,5 +17,6 @@
   <script src="js/app/app.js"></script>
   <script src="js/app/controllers/StoriesController.js"></script>
   <script src="js/app/services/StoriesService.js"></script>
+  <script src="js/app/services/PostService.js"></script>
 </body>
 </html>
