--- a/index.html
+++ b/index.html
@@ -9,14 +9,18 @@
     <link rel="stylesheet" href="app.css" />
 </head>
 <body ng-app="app">
+  
+  <a href="" ui-sref="top">Top Stories</a>
   <div ui-view>
      <!-- template of state inserted here --> 
   </div>
+  
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.3.1/angular-ui-router.min.js"></script>
   <script src="js/app/app.js"></script>
-  <script src="js/app/controllers/StoriesController.js"></script>
+  <script src="js/app/controllers/TopStoriesController.js"></script>
   <script src="js/app/controllers/PostController.js"></script>
-  <script src="js/app/services/StoriesService.js"></script>
+  <script src="js/app/services/PostsService.js"></script>
+  <script src="js/app/components/Item.js"></script>
 </body>
 </html>
