--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
   
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.3.1/angular-ui-router.min.js"></script>
+  <script src="js/angular-sanitize.js"></script>
+
   <script src="js/app/app.js"></script>
   <script src="js/app/controllers/TopStoriesController.js"></script>
   <script src="js/app/controllers/PostController.js"></script>
