begin 'top' state with template

--- a/index.html
+++ b/index.html
@@ -8,9 +8,14 @@
 
     <link rel="stylesheet" href="app.css" />
 </head>
-<body>
+<body ng-app="app">
+  <a href="" ui-sref="top">Top Stories</a>
+  <div ui-view>
+    <!-- 'top' state template here -->
+  </div>
   
   <script src="js/angular.js"></script>
   <script src="js/angular-ui-router.js"></script>
+  <script src="js/app/app.js"></script>
 </body>
 </html>
