--- a/index.html
+++ b/index.html
@@ -20,5 +20,6 @@
   <script src="js/app/controllers/TopStoriesController.js"></script>
   <script src="js/app/services/PostService.js"></script>
   <script src="js/app/components/item.js"></script>
+  <script src="js/app/controllers/PostController.js"></script>
 </body>
 </html>
