--- a/index.html
+++ b/index.html
@@ -12,12 +12,13 @@
 <div ng-app='app' class="app">
 Hacker News App
  <a ui-sref="top" ui-sref-active="active">Top</a>
-  <div ui-view></div>
+<ui-view></ui-view>
 </div>
 <script src="js/angular.js"></script>
 <script src="js/angular-ui-router.js"></script>
 <script src="js/app/app.js"></script>
 <script src="js/app/controllers/PostController.js"></script>
 <script src="js/app/controllers/TopController.js"></script>
+<script src="js/app/services/TopService.js"></script>
 </body>
 </html>
