--- a/index.html
+++ b/index.html
@@ -8,9 +8,15 @@
 
     <link rel="stylesheet" href="app.css" />
 </head>
-<body>
+<body ng-app="app">
+
+  <div ng-controller="PostsController as ctrl">
+    {{ctrl.name}}
+  </div>
 
   <script src="bower_components/angular/angular.min.js"></script>
-  <script src="bower_components/angular/angular-sanitize.min.js"></script>
+  <script src="bower_components/angular-sanitize/angular-sanitize.min.js"></script>
+  <script src="js/app/app.js"></script>
+  <script src="js/app/controllers/PostsController.js"></script>
 </body>
 </html>
