--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="app.css" />
 </head>
 <body ng-app="app">
+
   <a href="" ui-sref="home" ui-sref-active="active">Home</a>
 
   <ui-view> </ui-view>
@@ -16,6 +17,10 @@
   <div ng-controller="PostsController as ctrl">
 
     {{ctrl.name}}
+
+    <div ng-repeat="story in ctrl.topStories">
+      {{story}}
+    </div>
 
 
   </div>
@@ -25,5 +30,6 @@
   <script src="bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
   <script src="js/app/app.js"></script>
   <script src="js/app/controllers/PostsController.js"></script>
+  <script src="js/app/services/HttpService.js"></script>
 </body>
 </html>
