--- a/index.html
+++ b/index.html
@@ -10,24 +10,17 @@
 </head>
 <body ng-app="app">
 
-  <a href="" ui-sref="home" ui-sref-active="active">Home</a>
+  <a href="" ui-sref="top" ui-sref-active="active">Top</a>
 
   <ui-view> </ui-view>
 
-  <div ng-controller="PostsController as ctrl">
-
-    <div ng-repeat="story in ctrl.topStories">
-      <h2>{{$index + 1}} {{story.title}}</h2> <a ng-href="{{story.url}}">Link</a>
-      <p>Score: {{story.score}} | {{story.kids.length}} Comments | By: {{story.by}}</p>
-    </div>
-
-  </div>
 
   <script src="bower_components/angular/angular.min.js"></script>
   <script src="bower_components/angular-sanitize/angular-sanitize.min.js"></script>
   <script src="bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
   <script src="js/app/app.js"></script>
   <script src="js/app/controllers/PostsController.js"></script>
+  <script src="js/app/controllers/PostController.js"></script>
   <script src="js/app/services/HttpService.js"></script>
 </body>
 </html>
