working on adding comments to posts

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
   <script src="js/app/app.js"></script>
   <script src="js/app/controllers/PostsController.js"></script>
   <script src="js/app/controllers/PostController.js"></script>
+   <script src="js/app/controllers/CommentsController.js"></script>
   <script src="js/app/services/HttpService.js"></script>
 </body>
 </html>
