post component with resolve working correctly

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     <script src="js/app/directives/PostComponent.js"></script>
     <script src="js/app/directives/CommentComponent.js"></script>
     <script src="js/app/directives/PostsComponent.js"></script>
+    <script src="js/app/directives/TestComponent.js"></script>
     <script src="js/app/controllers/TestController.js"></script>
     <script src="js/app/services/HttpService.js"></script>
   </body>
