--- a/index.html
+++ b/index.html
@@ -20,5 +20,6 @@ Hacker News App
 <script src="js/app/controllers/PostController.js"></script>
 <script src="js/app/controllers/TopController.js"></script>
 <script src="js/app/services/TopService.js"></script>
+<script src="js/app/components/Comments.js"></script>
 </body>
 </html>
