--- a/index.html
+++ b/index.html
@@ -21,5 +21,6 @@ Hacker News App
 <script src="js/app/controllers/TopController.js"></script>
 <script src="js/app/services/TopService.js"></script>
 <script src="js/app/components/Comments.js"></script>
+<script src="node_modules/angular-sanitize/angular-sanitize.js"></script>
 </body>
 </html>
